Update contact form

--- a/index.html
+++ b/index.html
@@ -365,10 +365,10 @@
                 <div class="btn-box btns">
                   <button class="btn" type="submit">Submit</button>
                 </div>
-                <div id="statusMessage" style="margin-top: 10px;"></div>
+                <div id="statusMessage" style="margin-top: 10px; font-size: 1.6rem;"></div>
               </form>
             </div>
-            
+
           </div>
         </div>
       </section>
