--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </div>
           <div class="intro">
             <!-- <h3>Welcome to <span>Joana Lawer</span>'s homepage.</h3> -->
-            <p>I'm Front-End developer who builds user-friendly systems that solve real-world problems. With proficiency in HTML, CSS, JavaScript, React, and PostgreSQL, 
+            <p>I'm Front-End developer who builds user-friendly systems that solve real-world problems.
               I focus on creating digital solutions that are both powerful and intuitive.
               <br>
               Beyond coding, I'm passionate about turning data into decisions.
