Modify intro and profile

--- a/index.html
+++ b/index.html
@@ -43,14 +43,12 @@
             <span class="circle-spin"></span>
           </div>
           <div class="intro">
-            <!-- <h3>Welcome to <span>Joana Lawer</span>'s homepage.</h3> -->
-            <p>I'm Front-End developer who builds user-friendly systems that solve real-world problems.
-              I focus on creating digital solutions that are both powerful and intuitive.
-              <br>
-              Beyond coding, I'm passionate about turning data into decisions.
-              <br>
-              I also believe in giving back—I regularly volunteer to share my technical knowledge and contribute to social impact initiatives.
-            </p>
+            <h1 className="text-4xl md:text-5xl font-bold text-gray-900">
+              <span className="bg-gradient-to-r from-blue-600 to-purple-600 bg-clip-text text-transparent">
+                  Hey there! Ready to see some beautiful code that solves real problems?
+              </span>
+          </h1>
+          <h1 className="text-4xl md:text-5xl font-bold text-gray-900">Innovation Begins Here.</h1>
           </div>          
           <div class="btn-box btns text-center">
             <a href="#" class="btn" id="btn">Profile</a>
@@ -65,6 +63,13 @@
               <span class="close">&times;</span>
               <h1>Hi, I'm <span>Joana</span></h1>
               <div class="profile-statement ">
+                <p>I'm Front-End developer who builds user-friendly systems that solve real-world problems.
+                  I focus on creating digital solutions that are both powerful and intuitive.
+                  <br>
+                  Beyond coding, I'm passionate about turning data into decisions.
+                  <br>
+                  I also believe in giving back—I regularly volunteer to share my technical knowledge and contribute to social impact initiatives.
+                </p>
                 <p >
                   <b>Skills: </b> Front-End Development, Data Analysis
                   <br>
