Updated linkedin url

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               </div>
               <div class="social-profile">
                 <a href="https://github.com/joanalawer"><i class='bx bxl-github'></i></a>
-                <a href="www.linkedin.com/in/joanalawer"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://linkedin.com/in/joanalawer"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://x.com/joana_lawer"><i class='bx bxl-twitter'></i></a>
               </div>    
             </div>
@@ -258,7 +258,7 @@
 
               <div class="social-profile">
                 <a href="https://github.com/joanalawer"><i class='bx bxl-github'></i></a>
-                <a href="www.linkedin.com/in/joanalawer"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://linkedin.com/in/joanalawer"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://x.com/joana_lawer"><i class='bx bxl-twitter'></i></a>
               </div>
 
